--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -31,7 +31,7 @@ body{
 
 a, .link-read-more {
     color: #0645F9;
-    border-bottom: 1px solid transparent;
+    text-decoration: none;
 }
 
 a:hover, .link-read-more:hover {
@@ -1199,7 +1199,7 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
 }
 
 .article-content h3 {
-    font-size: 4.2rem;
+    font-size: 4.2rem !important;
     font-weight: bold;
 }
 
@@ -1215,4 +1215,88 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
     font-size: 2rem;
     font-weight: bold;
     font-family: 'Poppins', sans-serif;
+}
+
+.article-image {
+    margin-bottom: 4rem;
+}
+
+.article-content ul li::before {
+    background: #1E4BF0;
+    border-radius: 20px;
+    height: 5px;
+    width: 5px;
+}
+
+.article-content h3 {
+    margin-top: 4rem !important;
+}
+
+.article-content h3 + p {
+    margin-bottom: 4rem;
+}
+
+.article-content blockquote {
+    width: 50%;
+    padding: 120px 0 0 0;
+    margin: 4rem auto 0 auto;
+    background: url('img/quote.svg') no-repeat;
+    background-position: top left;
+    color: #383838;
+}
+
+.article-content blockquote p {
+    font-size: 2rem !important;
+    font-weight: 200;
+    line-height: 4.5rem;
+    text-align: left;
+}
+
+.article-content blockquote + a + h4 {
+    margin-top: 2rem !important;
+}
+
+.article-content h4 {
+    margin-bottom: 2rem !important;
+}
+
+.article-content p {
+    line-height: 3rem;
+}
+
+/* PROFILES */
+
+.cl-content {
+    margin: 0;
+}
+
+.cl-item-illust img {
+    width: 100%;
+}
+
+.cl-item-content {
+    padding: 1.5rem 0;
+
+}
+
+.h3-like {
+    font-size: 2rem;
+    text-transform: none;
+    color: #001E60;
+}
+
+.cl-item-subtitle,
+.cl-item-phone {
+    font-size: 1.6rem;
+    font-weight: 200;
+    color: #383838;
+}
+
+.cl-item-web a, .cl-item-email a {
+    width: 100%;
+    color: #001E60;
+}
+
+.cl-item-email a:focus, .cl-item-email a:hover {
+    border-bottom: none;
 }
