--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -349,6 +349,10 @@ h3, h4 {
     -webkit-transform: translateX(510px);
 }
 
+.main-navigation ul {
+    overflow: scroll;
+}
+
 .mn-menu-line {
     padding-top: 310px;
 }
@@ -1299,4 +1303,38 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
 
 .cl-item-email a:focus, .cl-item-email a:hover {
     border-bottom: none;
+}
+
+/* BREADCRUMB */
+
+.article .breadcrumb-nav {
+    display: none;
+}
+
+.bn-list li a {
+    background: none;
+    text-transform: none;
+    padding: 0;
+    font-size: 1.4rem;
+}
+
+.bn-item-link {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+}
+
+.bn-list li a:not(:last-child):after {
+    content: "  •  ";
+    padding: 0 5px;
+}
+
+.bn-item:first-child .bn-item-link {
+    color: inherit;
+}
+
+.bn-item-link:focus, .bn-item-link:hover,
+.bn-item:first-child .bn-item-link:focus, .bn-item:first-child .bn-item-link:hover {
+    text-decoration: none;
+    border-bottom: none;
+    color: #f6c54f;
 }
