--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -136,7 +136,7 @@
 }
 .article-wrapper .article-navigation .an-item-previous a{text-align:left; margin: 0px; padding: 0; */}
 .article-wrapper .article-navigation  .an-item-previous img{
-  margin-right: 45px;
+  margin-right: 46px;
   margin-left: 0px;
 }
 .article-wrapper .article-navigation  .an-item-previous .an-item-title{
@@ -158,4 +158,7 @@
   -moz-transition:ease-in-out 0.5s;
   -ms-transition:ease-in-out 0.5s;
   -o-transition:ease-in-out 0.5s;
+}
+.an-item-previous a:hover .an-item-content {
+    margin-right: 0em;
 }
