--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -162,3 +162,37 @@
 .an-item-previous a:hover .an-item-content {
     margin-right: 0em;
 }
+
+
+/**** SITEMAP ****/
+
+.content-list-bullet li::before {
+    background: #0645F9;
+}
+		.sitemap a.sm-item-title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    color: #001E60;
+    text-transform: none;
+    font-size: 1.5em;
+    margin-top: 0 !important;
+}
+
+.sitemap .layout-2-col, .partner .layout-2-col {
+    padding-top: 127px;
+}
+
+.sitemap .zone-hero{
+
+display:none;
+
+}
+
+.sitemap h1 span.ezstring-field {
+    font-family: 'Poppins', sans-serif;
+    color: #001E60;
+    text-transform: none;
+    font-weight: bold;
+    font-size: 4.2rem !important;
+    padding-top: 1em;
+}
