--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -197,6 +197,11 @@ display:none;
     padding-top: 1em;
 }
 
+/**** Liste des partenaires ****/
+.partner img.pl-item-illust {
+    background: transparent;
+}
+
 .partner-list h3.pl-item-title {
     border-bottom: 1px solid #000000;
     padding-top: 26px;
