--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -206,3 +206,51 @@ display:none;
     border-bottom: 1px solid #000000;
     padding-top: 26px;
 }
+
+/*** BANDEAU COOKIE ****/
+
+.cc-cookies .cc-cookie-accept {
+    padding: 0 22px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    font-weight: 400;
+    font-size: 10px;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 0.35em;
+    line-height: 27px;
+    position: absolute;
+    top: 2em;
+    right: .5em;
+    margin-top: 3px;
+    width: auto;
+    height: auto;
+    overflow: hidden;
+    text-indent: initial;
+}
+.cc-cookies .cc-cookie-accept:hover {
+background-color:#ffffff;
+color:#000000;
+}
+.cc-cookies .inside {
+    max-width: 830px;
+    color: #fff;
+    position: relative;
+    padding-right: 165px;
+    text-align:left;
+}
+
+.cc-cookies {
+    padding: 1em 5%;
+    background-color: #f6c54f;
+    top: auto;
+    z-index: 999;
+    font-weight: 300;
+    font-size: 14px;
+    color: #fff;
+    line-height: 1.35;
+    letter-spacing: .05em;
+}
+a.cc-cookie-link {
+    text-decoration: underline;
+}
