--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -9,18 +9,6 @@ body{
     min-height: 100%;
 }
 
-body{
-    content: '';
-    display: block;
-    height: 100%;
-    width: 100vw;
-    top: 200px;
-    left: 0;
-    /*background: url('img/cercle-pattern.svg') repeat-y;*/
-    background-size: cover;
-    min-height: 100%;
-}
-
 /* UTILS */
 
 .floatr {
@@ -34,7 +22,7 @@ a, .link-read-more {
     text-decoration: none;
 }
 
-a:hover, .link-read-more:hover {
+a:focus, a:active, a:hover, .link-read-more:hover {
     color: #0645F9;
     border-bottom: 1px solid #0645F9;
 }
@@ -131,7 +119,7 @@ a.txt-lightblue:hover {
 
 /* HEADINGS */
 
-h2, h2.main-title, h2.la-main-title {
+h1, h2, h2.main-title, h2.la-main-title {
     font-size: 4.2rem !important;
     font-family: 'Poppins', sans-serif !important;
     font-weight: 600;
@@ -606,7 +594,7 @@ h3, h4 {
 .block-page{
     clear: both;
     width: 100vw;
-
+    padding-top: 130px;
 }
 
 .block--secondary {
@@ -1382,4 +1370,99 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
 
 .article_list .layout-2-col {
     padding-top: 90px;
+}
+
+/* Cookies warning */
+
+.cc-cookies {
+    font-size: 1.2rem;
+    background: #001E60;
+    color: #FFF;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.4rem;
+}
+
+.cc-cookie-link {
+    display: inline-block;
+    clear: both;
+}
+
+.cc-cookie-accept {
+    /* display: block; */
+    background: #F7C452;
+    color: #fff;
+    text-indent: inherit;
+    height: auto;
+    width: auto;
+    padding: 1rem;
+    font-size: 1.4rem;
+    font-family: "Poppins", sans-serif;
+    margin-top: 1rem;
+}
+
+.cc-cookies a:hover, .cc-cookies a:focus {
+    border: 0;
+    color: white;
+}
+
+/* FAQ */
+
+.fc-title {
+    padding-left: 0;
+    border-bottom: none;
+    font-size: 2.8rem !important;
+}
+
+.faq-content {
+    background: none;
+}
+
+.faq-sub-title {
+    font-size: 3rem;
+    color: #001E60;
+    font-weight: 300;
+    font-family: "Poppins", sans-serif;
+    margin-top: 0;
+}
+
+.fs-item-link {
+    border-width: 1px;
+}
+
+.fs-item-link:focus, .fs-item-link:hover {
+    border: 1px solid #0645F9;
+}
+
+.fs-item-link:focus .fs-item-title, .fs-item-link:hover .fs-item-title {
+    color: #0645F9;
+}
+
+.fc-list-link:focus, .fc-list-link:hover, .fc-list-link.is-active {
+    background: #0645F9;
+    border-bottom: none;
+}
+
+.fc-box.item-is-open {
+    background: -webkit-linear-gradient(left, #fff 0%, #fff 50.1%, #0645F9 49%, #0645F9 100%);
+    background: linear-gradient(to right, #fff 0%, #fff 50.1%, #0645F9 49%, #0645F9 100%);
+}
+
+.item-is-open .fc-item-wrap {
+    border: none
+}
+
+.fc-list-link .icon {
+    color: #0645F9;
+}
+
+.fc-item-link:hover {
+    color: white;
+}
+
+.icon-plus {
+    padding-right: 1rem;
+}
+
+.fc-item-title {
+    padding-right: 0;
 }
