--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -255,3 +255,13 @@ color:#000000;
 a.cc-cookie-link {
     text-decoration: underline;
 }
+
+/**** CURSEUR MENU ****/
+
+li.mn-menu-item.mn-item-lvl-1 ul.mn-menu-submenu a {
+    cursor: pointer;
+}
+
+li.mn-menu-item.mn-item-lvl-1 a:first-child {
+    cursor: default;
+}
