--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -112,11 +112,20 @@
     -ms-transition:ease-in-out 0.5s;
     -o-transition:ease-in-out 0.5s;
 }
-.an-item-title {
+
+.an-item-next .an-item-title {
     display: inline-block;
     vertical-align: middle;
     height: 75px;
-    padding: 2.2em 2.5em;
+    padding: 2.2em 1.5em 2.2em 5.9em;
+    width: 100%;
+}
+
+.an-item-previous .an-item-title {
+    display: inline-block;
+    vertical-align: middle;
+    height: 75px;
+    padding: 2.2em 6.3em 2.2em 2.5em;
     width: 100%;
 }
 .article-navigation {
