--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -1467,6 +1467,10 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
 
 /* FAQ */
 
+.block-page.faq {
+    padding-top: 130px;
+}
+
 .fc-title {
     padding-left: 0;
     border-bottom: none;
