--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -1544,3 +1544,8 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
 .fc-item-title {
     padding-right: 0;
 }
+
+.fc-item-content  a{
+    text-decoration: underline;
+    color: #F6C54F;
+}
