--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -646,7 +646,10 @@ h3, h4 {
 
 .block-page{
     clear: both;
-    width: 100vw;
+}
+
+.block-page.newsletter-form {
+    width: 100%
 }
 
 .block--secondary {
